<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

	<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<android.support.constraint.Guideline
				android:id="@+id/guideline0"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_percent="0.07"/>

		<android.support.constraint.Guideline
				android:id="@+id/guideline2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_percent="0.25" app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/loginTextInputLayoutRegister" android:layout_marginEnd="9dp"/>

		<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/linearLayout3"
				android:layout_marginBottom="8dp"
				app:layout_constraintBottom_toTopOf="@+id/guideline0"
				app:layout_constraintTop_toTopOf="@+id/guideline0"
				app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp">

			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/create_account"
						android:textAlignment="viewStart"
						android:textColor="@color/white"
						android:textSize="18sp"
						android:textStyle="bold"/>

			</LinearLayout>
		</LinearLayout>

		<android.support.design.widget.TextInputLayout
				android:id="@+id/loginTextInputLayoutRegister"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:theme="@style/TextInputLayoutAppearance"
				app:layout_constraintTop_toTopOf="@+id/guideline2"
				app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp" app:layout_constraintStart_toEndOf="@+id/guideline2">


			<android.support.v7.widget.AppCompatEditText
					android:id="@+id/loginEditTextRegister"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/username"
					android:layout_marginTop="17dp"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:textColor="#FFFFFFFF"
					android:inputType="text"
					android:lines="1"
					android:maxLines="1"
					android:nextFocusDown="@id/passwordEditText"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
				android:id="@+id/firstPasswordTextInputLayoutRegister"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				app:passwordToggleEnabled="true"
				android:layout_marginTop="1dp"
				android:theme="@style/TextInputLayoutAppearance"
				app:layout_constraintTop_toBottomOf="@+id/loginTextInputLayoutRegister"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="10dp" android:layout_marginEnd="10dp">

			<android.support.v7.widget.AppCompatEditText
					android:id="@+id/firsPasswordEditTextRegister"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password"
					android:layout_marginTop="17dp"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:textColor="#FFFFFFFF"
					android:inputType="textPassword"
					android:lines="1"
					android:maxLines="1"
					android:nextFocusDown="@id/passwordEditText"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
				android:id="@+id/secondPasswordTextInputLayoutRegister"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				app:passwordToggleEnabled="true"
				android:layout_marginTop="1dp"
				android:theme="@style/TextInputLayoutAppearance"
				app:layout_constraintTop_toBottomOf="@+id/firstPasswordTextInputLayoutRegister"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="10dp" android:layout_marginEnd="10dp">

			<android.support.v7.widget.AppCompatEditText
					android:id="@+id/secondPasswordEditTextRegister"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/confirm_password"
					android:layout_marginTop="17dp"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:textColor="#FFFFFFFF"
					android:inputType="textPassword"
					android:lines="1"
					android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.v7.widget.AppCompatButton
				android:id="@+id/signUpButtonRegister"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up"
				android:background="@drawable/button_selector"
				android:layout_gravity="center"
				android:textAllCaps="false"
				android:textStyle="bold"
				android:textSize="17sp"
				android:textColor="@color/white"
				android:textAlignment="center"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/secondPasswordTextInputLayoutRegister"
				android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.285"/>
	</android.support.constraint.ConstraintLayout>

</ScrollView>